<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright (C) 2013 Johannes Schnatterer

    See the NOTICE file distributed with this work for additional
    information regarding copyright ownership.

    This file is part of nusic.

    nusic is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    nusic is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with nusic.  If not, see <http://www.gnu.org/licenses/>.

-->
<resources>
    <string name="action_refresh">Refresh releases</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings_developer">Developer Settings</string>
    <string name="action_share">Share</string>

    <string name="releaseListMenu_HideRelease">Hide release</string>
    <string name="releaseListMenu_HideAllByArtist">Hide all by artist</string>

    <!-- GUI captions -->
    <string name="FDroid">F-Droid</string>
    <string name="GooglePlay">Google Play</string>
    <string name="GitHub">GitHub</string>
    <string name="releaseListRow_RightArrow">Click to show details</string>
    <string name="releaseListRow_Thumbnail">Thumbnail of album art</string>
    <string name="LoadNewReleasesBinding_CheckingArtists">Checking all artists for new releases</string>
    <string name="MainActivity_noReleasesFound">No releases were found for the artists on your device in the specified time period.</string>
    <string name="MainActivity_noNewReleasesFound">Recently, no new releases were found for the artists on your device in the specified time period.</string>
    <string name="MainActivity_TabAll">All</string>
    <string name="MainActivity_TabJustAdded">Just added</string>
    <string name="MainActivity_TabAvailable">Available</string>
    <string name="MainActivity_TabAnnounced">Announced</string>
    <string name="MainActivity_AccessDeniedOnceTitle">Access denied</string>
    <string name="MainActivity_AccessDeniedOnceMessage">You denied access to the media on the device. Nusic cannot work without accessing the media. It reads the artist names of songs stored on the device in order to find new releases of these artists. If you want nusic to work, please press "allow".</string>
    <string name="MainActivity_AccessDeniedPermanentlyTitle">Access denied permanently</string>
    <string name="MainActivity_AccessDeniedPermanentlyMessage">You permanently denied acess to media on the device. Nusic cannot work without accessing the media. It reads the artist names of songs stored on the device in order to find new releases of these artists. If you want nusic to work, clear the data in the app info, start the app again and then choose "allow".</string>
    <string name="MainActivity_AccessDeniedPermanentlyPositiveButton">Go to app info</string>
    <string name="MainActivity_AccessDeniedPermanentlyNegativeButton">I do not want to use nusic</string>
    <!-- <string name="MainActivity_JustAddedInformation">All releases that were added within the last %1$d days</string> -->
    <string name="WelcomeScreenTitle">Welcome to nusic %1$s</string>
    <string name="WelcomeScreenPleaseBePatient">&#8230;please be patient ;)</string>
    <string name="WelcomeScreenFirstStartMayTakeAWhile">Depending on the amount of artists on you device, the very first start may take a while.</string>
    <string name="WelcomeScreenSyncronisationWillBeDoneBackground">After that, all further synchronisation will be done in the background. Nusic tells you about new releases via system notifications.</string>
    <string name="WelcomeScreenIfYouLikeNusicPleaseRate">If you like it, please rate nusic at @string/html_link_nusic_google_play or support its translation or development via @string/html_link_nusic_git_hub. In case of error please send an @string/html_link_email.</string>
    <string name="WelcomeScreenAndroid444">Please note: from 4.4.4 android no longer supports music on external SD cards. So nusic might not be able to parse these artists.</string>
    <string name="WelcomeScreenAndroid444SDScanner">You might want to have a look at @string/html_link_sd_scanner</string>
    <string name="SDScanner">SD Scanner</string>
    <string name="Email">E-mail</string>

    <string name="LoadNewReleasesService_newRelease">Found new release:</string>
    <string name="LoadNewReleasesService_newReleaseMultiple">Found %1$d new releases</string>
    <string name="LoadNewReleasesService_missingPermissionReadExternalStorage">Please allow access to media</string>
    <string name="ReleasedTodayService_ReleasedToday">Published today:</string>
    <string name="ReleasedTodayService_ReleasedTodayMultiple">%1$d releases are published today</string>

    <!-- Preferences -->
    <string name="preferences_category_releases">Releases</string>
    <string name="preferences_title_download_releases_time_period">Time period</string>
    <string name="preferences_summary_download_releases_time_period">Time period (from today back in time) for which releases are downloaded and displayed</string>
    <string-array name="preferences_entries_download_releases_time_period">
        <item>One month</item>
        <item>Three months</item>
        <item>Six months</item>
        <item>One year</item>
    </string-array>
    <string name="preferences_title_display_all_releases">Make hidden albums reappear</string>
    <string name="preferences_summary_display_all_releases">Albums can be hidden by long tapping them. This option resets all hidden albums and artists</string>
    <string name="preferences_message_display_all_releases">Do you really want to reset all hidden albums and artists?</string>

    <string name="preferences_category_bandwitdth">Bandwidth usage</string>
    <string name="preferences_title_download_only_on_wifi">WiFi only</string>
    <string name="preferences_summary_download_only_on_wifi_on">Don\'t use mobile networks</string>
    <string name="preferences_summary_download_only_on_wifi_off">Also use mobile networks</string>

    <string name="preferences_category_notifications">Notifications</string>
    <string name="preferences_title_is_enabled_notify_new_releases">New releases</string>
    <string name="preferences_summary_is_enabled_notify_new_releases_on">Notify when new releases are found</string>
    <string name="preferences_summary_is_enabled_notify_new_releases_off">No notification when new releases are found</string>
    <string name="preferences_title_is_enabled_notify_released_today">Release dates</string>
    <string name="preferences_summary_is_enabled_notify_released_today_on">Notify on the day releases are published</string>
    <string name="preferences_summary_is_enabled_notify_released_today_off">No Notification on the day releases are published</string>
    <string name="preferences_title_released_today_hour_of_day">Time of notification</string>
    <string name="preferences_summary_released_hour_of_day">Approximate time of notification that informs of releases dates. Android might delay execution in order to save energy</string>

    <string name="preferences_category_about">About %1$s</string>
    <string name="preferences_title_version">Version</string>
    <string name="preferences_title_contributors">Contributors</string>
    <string name="preferences_title_privacy_policy">Privacy Policy</string>
    <string name="preferences_summary_privacy_policy">Find out what data is accessed by nusic and what it does with it</string>
    <string name="preferences_title_licences">Licenses</string>
    <string name="preferences_summary_licences">Licenses that apply to nusic and its dependencies</string>
    <string name="preferences_title_changelog">Changelog</string>
    <string name="preferences_summary_changelog">See what\'s new</string>
    <string name="preferences_category_web">nusic on the web</string>
    <string name="preferences_category_contact">Contact</string>
    <string name="preferences_summary_fdroid">Those with a passion for Free and Open Source software can get nusic from F-Droid</string>
    <string name="preferences_summary_google_play">If you like nusic, please rate it. If you don\'t like it, please help us improve by creating an issue at GitHub</string>
    <string name="preferences_summary_git_hub">Report issues, parse source code, add translation or support development</string>
    <string name="preferences_title_email">E-mail</string>
    <string name="preferences_summary_email">Contact us via E-mail.</string>
    <string name="preferences_title_report">Report issue</string>
    <string name="preferences_summary_report">Report issue via E-mail, attaching your log files</string>
    <string name="preferences_category_misc">Misc.</string>
    <string name="preferences_title_current_log">Open current log file</string>
    <string name="preferences_title_loglevel_logcat">LogCat Log Level</string>
    <string name="preferences_summary_loglevel_logcat">Determine which log statements are forwarded to LogCat.</string>
    <string name="preferences_title_loglevel_file">File Log Level</string>
    <string name="preferences_summary_loglevel_file">Determine which log statements are forwarded to the log file.</string>
    <string name="preferences_title_notify_refresh_errors">Show errors during refresh</string>

    <!-- (Error) messages -->
    <string name="GenericError">Something almost impossible has happened: %1s!</string>
    <string name="NotOnline">No connection to the internet (Check settings to allow usage of mobile connection)</string>
    <string name="MainActivity_errorLoadingReleases">Error loading releases from the device</string>
    <string name="MainActivity_refreshAlreadyInProgress">Refresh already in progress.</string>
    <string name="MainActivity_pleaseWaitUntilRefreshIsFinished">Please wait until refreshing releases has finished</string>

    <string name="TextAssetActivity_errorLoadingFile">Error load text file</string>

    <string name="NusicWebViewActivity_sharedViaNusic">Shared via nusic android app</string>

    <string name="LoadNewReleasesBinding_errorFindingReleases">Refreshing releases failed: </string>
    <string name="LoadNewReleasesBinding_errorFindingReleasesGeneric">Unbelievable error while trying to refresh releases: </string>
    <string name="LoadNewReleasesBinding_finishedWithErrors">Updating releases failed for %1$d of %2$d artists</string>

    <string name="ReleasedTodayService_ReleasedTodayError">Error finding today\'s releases</string>
</resources>
