<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright (C) 2013 Johannes Schnatterer

    See the NOTICE file distributed with this work for additional
    information regarding copyright ownership.

    This file is part of nusic-ui-android.

    nusic-ui-android is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    nusic-ui-android is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with nusic-ui-android.  If not, see <http://www.gnu.org/licenses/>.

-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
          <!-- Version summary is set in preference activity-->
          <Preference
            android:key="@string/preferences_key_version"
            android:title="@string/preferences_title_version" />
		<Preference android:title="@string/preferences_title_changelog" 
		    android:summary="@string/preferences_summary_changelog">
            <intent android:targetPackage="info.schnatterer.nusic" 
                android:targetClass="info.schnatterer.nusic.android.activities.TextAssetActivity">
                <extra android:name="@string/extra_activity_title" android:value="Changelog" />
                <extra android:name="@string/extra_asset_name" android:value="CHANGELOG.html" />
            </intent>
		</Preference>
		<Preference android:title="@string/preferences_title_licences" android:summary="@string/preferences_summary_licences">
            <intent android:targetPackage="info.schnatterer.nusic" 
                android:targetClass="info.schnatterer.nusic.android.activities.TextAssetActivity">
                <extra android:name="@string/extra_activity_title" android:value="@string/preferences_title_licences" />
                <extra android:name="@string/extra_asset_name" android:value="NOTICE.html" />
            </intent>
		</Preference> 
		<Preference android:title="@string/preferences_title_privacy_policy"
		       android:summary="@string/preferences_summary_privacy_policy">
            <intent android:targetPackage="info.schnatterer.nusic" 
                android:targetClass="info.schnatterer.nusic.android.activities.TextAssetActivity">
                <extra android:name="@string/extra_activity_title" android:value="@string/preferences_title_privacy_policy" />
                <extra android:name="@string/extra_asset_name" android:value="privacyPolicy.html" />
            </intent>
		</Preference> 
    <PreferenceCategory android:title="@string/preferences_category_web" >
        <Preference android:title="@string/GooglePlay" 
            android:summary="@string/preferences_summary_google_play">
               <intent
                   android:action="android.intent.action.VIEW"
                   android:data="@string/link_nusic_google_play" >
               </intent>
       </Preference>
        
        <Preference android:title="@string/GitHub"
            android:summary="@string/preferences_summary_git_hub">
               <intent
                   android:action="android.intent.action.VIEW"
                   android:data="@string/app_url" >
               </intent>
       </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_category_contact" >
        <Preference android:title="@string/preferences_title_email"
		       android:summary="@string/preferences_summary_email">
             <intent android:targetPackage="info.schnatterer.nusic"
                android:targetClass="info.schnatterer.nusic.android.activities.NusicWebView"
                android:data="mailto:@string/app_contact?subject=[nusic @string/versionName]&amp;body="/> 
       </Preference>
        <Preference android:title="@string/preferences_title_report"
               android:summary="@string/preferences_summary_report">
             <intent android:targetPackage="info.schnatterer.nusic"
                android:targetClass="info.schnatterer.nusic.android.activities.SendLogActivity"/> 
       </Preference>
    </PreferenceCategory>
</PreferenceScreen>